tests/NormalTests/paczka2/big_fuzzy/20215441.err
Error in line 5: A366 A645 41,1
Error in line 3: xqBTy8FgPPc A645 75,1
Error in line 6: A366 A366 93,3
Error in line 16: X5jt4Idm A560 78,5
Error in line 21: X5jt4Idm A366 45,9
Error in line 23: X5jt4Idm S633 60,1
Error in line 38: igtAoGJFIQ A645 23,4
Error in line 40: 3gtH S633 48,6
Error in line 45: 3gtH A366 32,4
Error in line 47: xqBTy8FgPPc A645 95,0
Error in line 62: A366 A560 6,21
Error in line 55: igtAoGJFIQ A560 20,1
Error in line 61: xqBTy8FgPPc A560 0,3
Error in line 65: xqBTy8FgPPc A366 76,6
Error in line 64: igtAoGJFIQ A645 65,1
Error in line 70: igtAoGJFIQ A366 45,3
Error in line 72: igtAoGJFIQ A560 28,8
Error in line 87: igtAoGJFIQ A645 11,9
Error in line 89: A366 A560 413,1
Error in line 91: 3gtH S633 315,9
Error in line 102: igtAoGJFIQ A366 -4,0
Error in line 93: igtAoGJFIQ A366 98,8
Error in line 96: xqBTy8FgPPc A645 3,4
Error in line 109: mG2kEiCh A645 54,3
Error in line 117: L0mm A366 15,6
Error in line 123: 3gtH A645 23,7
Error in line 119: mG2kEiCh S633 13,0
Error in line 125: A366 A560 64,9
Error in line 133: L0mm S633 96,6
Error in line 131: xqBTy8FgPPc A645 39,2
Error in line 130: mG2kEiCh A645 38,4
Error in line 136: xqBTy8FgPPc A366 29,9
Error in line 152: X5jt4Idm A366 89,8
Error in line 161: xqBTy8FgPPc A560 5,7
Error in line 153: 3gtH A645 112,5
Error in line 165: 3gtH S633 71,7
Error in line 170: 3gtH A560 68,3
Error in line 175: igtAoGJFIQ S633 19,2
Error in line 183: igtAoGJFIQ A645 23,0
Error in line 193: xqBTy8FgPPc AZ45 131,5
Error in line 190: xqBTy8FgPPc A645 87,1
Error in line 196: mG2kEiCh A645 85,1
Error in line 200: L0mm A366 71,1
Error in line 204: mG2kEiCh A645 35,7
Error in line 214: A366 S633 40,2
Error in line 217: A366 A645 96,3
Error in line 218: A366 A560 45,4
Error in line 211: X5jt4Idm A560 86,6
Error in line 221: xqBTy8FgPPc A366 37,0
Error in line 228: 3gtH A560 17,9
